# VeritasFinancial

./: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
configs/: data_config.yaml  deployment_config.yaml  feature_config.yaml  model_config.yaml  preprocessing_config.yaml
data/features/: graph_features.parquet  static_features.parquet  temporal_features.parquet
docs/: api_documentation.txt  data_dictionary.txt  feature_documentation.txt  model_card.txt
notebooks/: 01_data_acquisition.ipynb  02_eda_statistical_analysis.ipynb  03_feature_engineering.ipynb  04_model_experimentation.ipynb  05_model_evaluation.ipynb  06_production_preparation.ipynb
scripts/: deploy_model.py  evaluate_model.py  run_data_pipeline.py  train_model.py
src/: __init__.py
src/data_acquisition/: __init__.py  api_clients.py  data_validators.py  database_connectors.py  stream_consumers.py
src/data_preprocessing/: __init__.py
src/data_preprocessing/cleaners/: customer_cleaner.py  device_cleaner.py  transaction_cleaner.py
src/data_preprocessing/handlers/: imbalance.py  missing_values.py  outliers.py
src/data_preprocessing/pipelines/: feature_pipeline.py  preprocessing_pipeline.py
src/data_preprocessing/transformers/: categorical_encoder.py  datetime_processor.py  numerical_scaler.py
src/deployment/: __init__.py
src/deployment/api/: endpoints.py  fastapi_app.py  middleware.py
src/deployment/monitoring/: alerting.py  drift_detection.py  performance_tracking.py
src/deployment/pipeline/: batch_processing.py  feature_store.py  realtime_processing.py
src/exploratory_analysis/: __init__.py  anomaly_detection.py  correlation_studies.py  statistical_analysis.py  temporal_analysis.py  visualizations.py
src/feature_engineering/: __init__.py
src/feature_engineering/aggregate_features/: customer_aggregates.py  device_aggregates.py  merchant_aggregates.py
src/feature_engineering/domain_features/: behavioral_features.py  customer_features.py  device_features.py  transaction_features.py
src/feature_engineering/embedding_features/: categorical_embeddings.py  transaction_embeddings.py
src/feature_engineering/graph_features/: community_detection.py  network_analysis.py
src/feature_engineering/temporal_features/: rolling_statistics.py  seasonality.py  time_gaps.py
src/modeling/: __init__.py
src/modeling/classical_ml/: ensemble_methods.py  isolation_forest.py  lightgbm_model.py  xgboost_model.py
src/modeling/deep_learning/: autoencoders.py  lstm_models.py  neural_networks.py  transformers.py
src/modeling/evaluation/: business_metrics.py  interpretability.py  metrics.py  thresholds.py
src/modeling/training/: cross_validation.py  early_stopping.py  hyperparameter_tuning.py
src/utils/: __init__.py  config_manager.py  data_serializers.py  logger.py  parallel_processing.py  security.py
tests/: __init__.py  test_data_preprocessing.py  test_feature_engineering.py  test_models.py  test_utils.py
