# =============================================================================
# VERITASFINANCIAL - PROJECT CONFIGURATION
# =============================================================================
# Modern Python project configuration using pyproject.toml
# This file replaces setup.py, setup.cfg, requirements.txt for metadata
# =============================================================================

[build-system]
# Define the build system requirements
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# =============================================================================
# PROJECT METADATA
# =============================================================================
[project]
# Basic project information
name = "veritasfinancial"
version = "1.0.0"
description = "Enterprise Banking Fraud Detection System using Classical ML, Transformers, and LLMs"
readme = "README.md"
authors = [
    {name = "Data Science Team", email = "datascience@veritasfinancial.com"},
    {name = "MLOps Team", email = "mlops@veritasfinancial.com"}
]
license = {text = "Proprietary"}
maintainers = [
    {name = "Veritas Financial", email = "engineering@veritasfinancial.com"}
]

# Project classification (PyPI metadata)
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]

# Keywords for search
keywords = [
    "fraud-detection",
    "banking",
    "machine-learning",
    "deep-learning",
    "transformers",
    "llm",
    "anomaly-detection",
    "financial-security",
    "real-time-detection"
]

# Project URLs
[project.urls]
Homepage = "https://github.com/veritasfinancial/fraud-detection"
Documentation = "https://docs.veritasfinancial.com/fraud-detection"
Repository = "https://github.com/veritasfinancial/fraud-detection.git"
Changelog = "https://github.com/veritasfinancial/fraud-detection/blob/main/CHANGELOG.md"
Issues = "https://github.com/veritasfinancial/fraud-detection/issues"

# =============================================================================
# DEPENDENCIES
# =============================================================================
# Production dependencies (installed with pip install veritasfinancial)
dependencies = [
    # Core data science
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    
    # Machine learning
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
    "imbalanced-learn>=0.11.0",
    
    # Deep learning
    "torch>=2.0.0",
    "transformers>=4.30.0",
    
    # Feature engineering
    "category-encoders>=2.6.0",
    "featuretools>=1.24.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    
    # Explainability
    "shap>=0.42.0",
    "lime>=0.2.0",
    
    # Data processing
    "pyarrow>=12.0.0",
    "fastparquet>=2023.4.0",
    
    # API and database
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "sqlalchemy>=2.0.0",
    "redis>=4.5.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "joblib>=1.3.0",
]

# Optional dependencies for different use cases
[project.optional-dependencies]
# For GPU acceleration
gpu = [
    "torch>=2.0.0+cu118",
    "xformers>=0.0.20",
    "triton>=2.0.0",
]

# For development
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "mypy>=1.4.0",
    "pre-commit>=3.3.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

# For monitoring and observability
monitoring = [
    "prometheus-client>=0.17.0",
    "sentry-sdk>=1.30.0",
    "opentelemetry-api>=1.19.0",
    "opentelemetry-sdk>=1.19.0",
]

# For cloud deployment
cloud = [
    "boto3>=1.28.0",
    "google-cloud-storage>=2.10.0",
    "azure-storage-blob>=12.17.0",
    "kubernetes>=26.0.0",
]

# All optional dependencies
all = [
    "veritasfinancial[gpu,dev,monitoring,cloud]",
]

# =============================================================================
# ENTRY POINTS
# =============================================================================
# Define command-line scripts
[project.scripts]
# Main CLI entry points
fraud-train = "veritasfinancial.cli.train:main"
fraud-predict = "veritasfinancial.cli.predict:main"
fraud-evaluate = "veritasfinancial.cli.evaluate:main"
fraud-serve = "veritasfinancial.cli.serve:main"
fraud-analyze = "veritasfinancial.cli.analyze:main"

# Utility scripts
fraud-features = "veritasfinancial.cli.features:main"
fraud-monitor = "veritasfinancial.cli.monitor:main"
fraud-backtest = "veritasfinancial.cli.backtest:main"

# =============================================================================
# GUI APPLICATIONS (if any)
[project.gui-scripts]
fraud-dashboard = "veritasfinancial.visualization.dashboard:run"

# =============================================================================
# PACKAGE DISCOVERY
# =============================================================================
[tool.setuptools.packages.find]
# Automatically find all packages
where = ["src"]                           # Look in src directory
exclude = ["tests*", "scripts*"]          # Exclude test directories
namespaces = false                         # Don't use namespace packages

# =============================================================================
# BLACK CODE FORMATTER CONFIGURATION
# =============================================================================
[tool.black]
# Black formatting options
line-length = 88                           # Default black line length
target-version = ['py310', 'py311']        # Python versions to target
include = '\.pyi?$'                         # File pattern to include
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''
preview = true                               # Use preview features

# =============================================================================
# RUFF LINTER CONFIGURATION
# =============================================================================
[tool.ruff]
# Ruff linter settings - replaces flake8, isort, pylint
line-length = 88
target-version = "py310"

# Select all rules by default, but exclude some
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "T20",  # flake8-print
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by black)
    "B008",   # Do not perform function calls in argument defaults
    "C901",   # Too complex (temporarily disabled)
]

# Exclude certain files/directories
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    ".venv",
    "notebooks",
]

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# =============================================================================
# ISORT CONFIGURATION (handled by ruff now)
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# =============================================================================
# MYPY TYPE CHECKER CONFIGURATION
# =============================================================================
[tool.mypy]
# Strict type checking
strict = true
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_subclassing_any = false

# Ignore missing imports for third-party libraries
[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "pandas.*",
    "sklearn.*",
    "torch.*",
    "transformers.*",
]
ignore_missing_imports = true

# =============================================================================
# PYTEST CONFIGURATION
# =============================================================================
[tool.pytest.ini_options]
# Pytest settings
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# Markers for categorizing tests
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: unit tests",
    "integration: integration tests",
    "model: model tests",
    "gpu: tests requiring GPU",
]

# =============================================================================
# COVERAGE CONFIGURATION
# =============================================================================
[tool.coverage.run]
# Coverage measurement settings
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
# Coverage report settings
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
]

# =============================================================================
# PYTHON PATH CONFIGURATION
# =============================================================================
[tool.setuptools]
package-dir = {"" = "src"}
zip-safe = false
include-package-data = true

# =============================================================================
# END OF pyproject.toml
# =============================================================================